--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <iframe
                           width="100%"
                           height="500"
-                          src="https://www.youtube.com/embed/O8_C7bpjT9M"
+                          src="https://www.youtube.com/embed/yt6md2frU1k"
                           title="YouTube video player"
                           frameborder="0"
                           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -833,14 +833,14 @@
                               title=""
                             />
                             <a
-                              href="https://www.youtube.com/embed/Z_xUFU7-ywM"
+                              href="https://www.youtube.com/embed/yt6md2frU1k"
                               class="lightbox mfp-iframe"
                               title="YouTube Video 1"
                             ></a>
                           </div>
 
                           <i class="fas fa-video"></i>
-                          <h4 class="name">YouTube Video 1</h4>
+                          <h4 class="name">YouTube Video</h4>
                           <span class="category">YouTube Videos</span>
                         </figure>
                       </div>
