add title to home page

--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
             <!-- Home Subpage -->
             <section data-id="home" class="animated-section start-page">
               <div class="section-content vcentered">
+                <div class="page-title">
+                  <h2>Hi, I'm <span>Tzuu</span></h2>
+                </div>
                 <div class="row">
                   <div class="col-sm-12 col-md-12 col-lg-12">
                     <div class="video-block">
