--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <div class="header-titles">
               <h2>Tzuu Yao</h2>
               <h4>Software Development Engineer II (iOS)</h4>
+              <h4>Solutions Architect</h4>
             </div>
           </div>
 
@@ -169,6 +170,20 @@
                       </div>
                     </div>
                   </div>
+                </div>
+                <div>
+                  <p>
+                    More personal project:
+                    <a href="https://node.avvanest.com/" target="_blank"
+                      >NodeJS + React App</a
+                    >
+                    |
+                    <a
+                      href="https://authsample.avvanest.com/web-messaging-login-page.html"
+                      target="_blank"
+                      >Auth and Messaging</a
+                    >.
+                  </p>
                 </div>
               </div>
             </section>
@@ -579,13 +594,17 @@
 
                     <!-- Knowledges -->
                     <div class="block-title">
-                      <h3>Knowledges</h3>
+                      <h3>Methodologies & Expertise</h3>
                     </div>
 
                     <ul class="knowledges">
+                      <li>Solutions Architecture / Engineering</li>
+                      <li>Customer Success Management (CSM)</li>
+                      <li>Enterprise SaaS Integration</li>
                       <li>Mobile Programming iOS swift</li>
                       <li>Web Programming</li>
                       <li>Amazon Web Services</li>
+                      <li>Auth & JWT</li>
                       <li>Analytics</li>
                       <li>Databases - SQL/MongoDB</li>
                       <li>Communication</li>
