--- a/index.html
+++ b/index.html
@@ -150,9 +150,12 @@
             <!-- Home Subpage -->
             <section data-id="home" class="animated-section start-page">
               <div class="section-content vcentered">
-                <div class="page-title">
-                  <h2>Hi, I'm <span>Tzuu</span></h2>
+                <div class="block-title">
+                  <h3>Hi, I'm <span>Tzuu</span></h3>
                 </div>
+                <!-- <div class="page-title">
+                  <h2>Hi, I'm <span>Tzuu</span></h2>
+                </div> -->
                 <div class="row">
                   <div class="col-sm-12 col-md-12 col-lg-12">
                     <div class="video-block">
@@ -169,21 +172,21 @@
                         </iframe>
                       </div>
                     </div>
+                    <div>
+                      <p>
+                        More personal project:
+                        <a href="https://node.avvanest.com/" target="_blank"
+                          >NodeJS + React App</a
+                        >
+                        |
+                        <a
+                          href="https://authsample.avvanest.com/web-messaging-login-page.html"
+                          target="_blank"
+                          >Auth and Messaging</a
+                        >.
+                      </p>
+                    </div>
                   </div>
-                </div>
-                <div>
-                  <p>
-                    More personal project:
-                    <a href="https://node.avvanest.com/" target="_blank"
-                      >NodeJS + React App</a
-                    >
-                    |
-                    <a
-                      href="https://authsample.avvanest.com/web-messaging-login-page.html"
-                      target="_blank"
-                      >Auth and Messaging</a
-                    >.
-                  </p>
                 </div>
               </div>
             </section>
